// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`auditBlocksSemantics document has divatos and empty articles 1`] = `
Object {
  "liveCollections": Array [
    Object {
      "collection": Object {
        "length": 2,
      },
      "name": "Empty \\"article\\" elements count in dom",
    },
  ],
  "name": "block elements count in dom",
  "tables": Array [
    Object {
      "address": 20,
      "article": 20,
      "details": 20,
      "div": 100,
      "li": 20,
      "section": 20,
      "summary": 20,
      "ul": 20,
    },
  ],
  "warnings": Array [
    "Document has much div",
    "Document has empty blocks",
  ],
}
`;

exports[`auditBlocksSemantics document has good block semantic 1`] = `
Object {
  "liveCollections": Array [],
  "name": "block elements count in dom",
  "tables": Array [
    Object {
      "address": 20,
      "article": 20,
      "details": 20,
      "div": 20,
      "li": 20,
      "section": 20,
      "summary": 20,
      "ul": 20,
    },
  ],
  "warnings": Array [],
}
`;

exports[`auditCommonSemantics document does not have any common tag 1`] = `
Object {
  "errors": Array [],
  "name": "common elements count in dom",
  "tables": Array [
    Object {
      "footer": 0,
      "header": 0,
      "main": 0,
      "nav": 0,
    },
  ],
  "warnings": Array [
    "Document does not have main tag",
    "Document does not have header tag",
  ],
}
`;

exports[`auditCommonSemantics document has each common elements 1`] = `
Object {
  "errors": Array [],
  "name": "common elements count in dom",
  "tables": Array [
    Object {
      "footer": 1,
      "header": 1,
      "main": 1,
      "nav": 1,
    },
  ],
  "warnings": Array [],
}
`;

exports[`auditCommonSemantics document has two header tags 1`] = `
Object {
  "errors": Array [],
  "name": "common elements count in dom",
  "tables": Array [
    Object {
      "footer": 1,
      "header": 2,
      "main": 1,
      "nav": 1,
    },
  ],
  "warnings": Array [],
}
`;

exports[`auditCommonSemantics document has two main tags 1`] = `
Object {
  "errors": Array [
    "Document must have one main tag",
  ],
  "name": "common elements count in dom",
  "tables": Array [
    Object {
      "footer": 1,
      "header": 1,
      "main": 2,
      "nav": 1,
    },
  ],
  "warnings": Array [],
}
`;

exports[`auditHeaderSemantics document does not have any headers 1`] = `
Object {
  "errors": Array [
    "Document must have one h1",
  ],
  "name": "header elements count in dom",
  "tables": Array [
    Object {
      "h1": 0,
      "h2": 0,
      "h3": 0,
      "h4": 0,
      "h5": 0,
      "h6": 0,
    },
  ],
}
`;

exports[`auditHeaderSemantics document has some headers 1`] = `
Object {
  "errors": Array [],
  "name": "header elements count in dom",
  "tables": Array [
    Object {
      "h1": 1,
      "h2": 2,
      "h3": 3,
      "h4": 4,
      "h5": 5,
      "h6": 6,
    },
  ],
}
`;

exports[`auditHeaderSemantics document has two h1 1`] = `
Object {
  "errors": Array [
    "Document must have one h1",
  ],
  "name": "header elements count in dom",
  "tables": Array [
    Object {
      "h1": 2,
      "h2": 0,
      "h3": 0,
      "h4": 0,
      "h5": 0,
      "h6": 0,
    },
  ],
}
`;

exports[`auditTextSemantics 1`] = `
Object {
  "errors": Array [],
  "name": "text elements count in dom",
  "tables": Array [
    Object {
      "blockquote": 1,
      "dd": 2,
      "dir": 3,
      "dl": 4,
      "dt": 5,
      "name": "text elements",
      "pre": 6,
    },
    Object {
      "abbr": 16,
      "b": 9,
      "cite": 17,
      "code": 12,
      "em": 15,
      "i": 10,
      "name": "text semantic elements",
      "p": 8,
      "small": 11,
      "span": 7,
      "strong": 13,
      "time": 14,
    },
  ],
}
`;

exports[`document does not any text tag 1`] = `
Object {
  "errors": Array [
    "Document does not any text tag",
  ],
  "name": "text elements count in dom",
  "tables": Array [
    Object {
      "blockquote": 0,
      "dd": 0,
      "dir": 0,
      "dl": 0,
      "dt": 0,
      "name": "text elements",
      "pre": 0,
    },
    Object {
      "abbr": 0,
      "b": 0,
      "cite": 0,
      "code": 0,
      "em": 0,
      "i": 0,
      "name": "text semantic elements",
      "p": 0,
      "small": 0,
      "span": 0,
      "strong": 0,
      "time": 0,
    },
  ],
}
`;
